--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             <!-- 냄비 카드 -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center" style="width: 20rem; height: 500px">
-                    <img src="https://images.unsplash.com/photo-1590794056226-79ef3a8147e1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cG90fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
-                        class="card-img-top" alt="냄비 이미지" />
+                    <a href="https://blog.naver.com/penguin_travel" target="_blank">
+                        <img src="https://images.unsplash.com/photo-1590794056226-79ef3a8147e1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cG90fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                            class="card-img-top" alt="냄비 이미지" />
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">냄비</h5>
                         <h6 class="card-subtitle mb-2 text-muted" style="margin-bottom: 10px;">5만원</h6>
@@ -65,8 +67,10 @@
             <!-- 전기밥솥 카드 -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center" style="width: 20rem; height: 500px">
-                    <img src="https://images.unsplash.com/photo-1544233726-9f1d2b27be8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8JUVCJUIwJUE1JUVDJTg2JUE1fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
-                        class="card-img-top" alt="전기밥솥 이미지" />
+                    <a href="https://blog.naver.com/penguin_travel" target="_blank">
+                        <img src="https://images.unsplash.com/photo-1544233726-9f1d2b27be8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8JUVCJUIwJUE1JUVDJTg2JUE1fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                            class="card-img-top" alt="전기밥솥 이미지" />
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">전기밥솥</h5>
                         <h6 class="card-subtitle mb-2 text-muted" style="margin-bottom: 10px;">8만원</h6>
@@ -79,7 +83,9 @@
             <!-- 청소기 카드 -->
             <div class="col-md-4 mb-4">
                 <div class="card text-center" style="width: 20rem; height: 500px">
-                    <img src="청소기.jpeg" class="card-img-top" alt="청소기 이미지" />
+                    <a href="https://blog.naver.com/penguin_travel" target="_blank">
+                        <img src="청소기.jpeg" class="card-img-top" alt="청소기 이미지" />
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">청소기</h5>
                         <h6 class="card-subtitle mb-2 text-muted" style="margin-bottom: 10px;">20만원</h6>
